--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/sass.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SASS course</title>
+    <title>Lesson 05</title>
   </head>
   <body>
+    <button class="small-btn" type="button">Click me 😍</button>
+
     <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
