--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/sass.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesson 05</title>
+    <title>Lesson 06</title>
   </head>
   <body>
-    <button class="small-btn" type="button">Click me 😍</button>
-
+    <button class="button" type="button">
+      <svg class="button-icon"></svg>
+      <span class="button-label">Замовити</span>
+    </button>
     <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
