--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/sass.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesson 07</title>
+    <title>Lesson 05-14</title>
   </head>
   <body>
     <script type="module" src="./src/js/main.js"></script>
